--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
     <title>TwoCards Partners</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <load ="partials/header.html" />
+    <main></main>
+
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
