--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <load ="partials/header.html" />
+    <load ="partials/hero.html" />
     <main></main>
 
     <script type="module" src="/main.js"></script>
