--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>TwoCards Partners</title>
   </head>
   <body>
     <load ="partials/header.html" />
     <load ="partials/hero.html" />
-    <main></main>
+    <main>
+      <load ="partials/our-goal.html" />
+    </main>
 
     <script type="module" src="/main.js"></script>
   </body>
