create advantages section

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <load ="partials/hero.html" />
     <main>
       <load ="partials/our-goal.html" />
+      <load ="partials/our-advantages.html" />
     </main>
 
     <script type="module" src="/main.js"></script>
