--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <main>
       <load ="partials/our-goal.html" />
       <load ="partials/our-advantages.html" />
+      <load ="partials/commissions.html" />
     </main>
 
     <script type="module" src="/main.js"></script>
