--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,13 @@
     <title>TwoCards Partners</title>
   </head>
   <body>
-    <load ="partials/header.html" />
-    <load ="partials/hero.html" />
+    <!-- <load ="partials/header.html" />
+    <load ="partials/hero.html" /> -->
     <main>
-      <load ="partials/our-goal.html" />
+      <!-- <load ="partials/our-goal.html" />
       <load ="partials/our-advantages.html" />
-      <load ="partials/commissions.html" />
+      <load ="partials/commissions.html" /> -->
+      <load ="partials/testimonials.html" />
     </main>
 
     <script type="module" src="/main.js"></script>
