create contact section

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,11 @@
       <!-- <load ="partials/our-goal.html" />
       <load ="partials/our-advantages.html" />
       <load ="partials/commissions.html" /> -->
-      <load ="partials/testimonials.html" />
+      <!-- <load ="partials/testimonials.html" /> -->
+      <!-- <load ="partials/faq.html" /> -->
+      <load ="partials/contact-us.html" />
     </main>
+    <!-- <load ="partials/footer.html" /> -->
 
     <script type="module" src="/main.js"></script>
   </body>
