create contacts end footer section

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-phone.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,17 +13,17 @@
     <title>TwoCards Partners</title>
   </head>
   <body>
-    <!-- <load ="partials/header.html" />
-    <load ="partials/hero.html" /> -->
+    <load ="partials/header.html" />
+    <load ="partials/hero.html" />
     <main>
-      <!-- <load ="partials/our-goal.html" />
+      <load ="partials/our-goal.html" />
       <load ="partials/our-advantages.html" />
-      <load ="partials/commissions.html" /> -->
-      <!-- <load ="partials/testimonials.html" /> -->
-      <!-- <load ="partials/faq.html" /> -->
+      <load ="partials/commissions.html" />
+      <load ="partials/testimonials.html" />
+      <load ="partials/faq.html" />
       <load ="partials/contact-us.html" />
     </main>
-    <!-- <load ="partials/footer.html" /> -->
+    <load ="partials/footer.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
