create coockie end update faq section

--- a/src/faq-page.html
+++ b/src/faq-page.html
@@ -14,23 +14,12 @@
   </head>
   <body>
     <load ="partials/header.html" />
-    <load ="partials/hero.html" />
     <main>
-      <load ="partials/our-goal.html" />
-      <load ="partials/our-advantages.html" />
-      <load ="partials/commissions.html" />
-      <load ="partials/testimonials.html" />
-      <load ="partials/faq.html" />
+      <load ="partials/faq-page.html" />
       <load ="partials/contact-us.html" />
     </main>
     <load ="partials/footer.html" />
-    <load ="partials/cookie.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
 </html>
-<!-- .section {
-  width: clamp(1110px, 100vw, 1920px);
-  aspect-ratio: 1920 / 700;
-  max-height: 700px;
-} -->
