start fix project

--- a/src/faq-page.html
+++ b/src/faq-page.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-phone.png" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +13,7 @@
     <title>TwoCards Partners</title>
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load ="partials/faq-header.html" />
     <main>
       <load ="partials/faq-page.html" />
       <load ="partials/contact-us.html" />
