--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,8 @@
       <load ="partials/contact-us.html" />
     </main>
     <load ="partials/footer.html" />
-    <!-- <load ="partials/cookie.html" /> -->
+    <load ="partials/cookie.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
 </html>
-<!-- .section {
-  width: clamp(1110px, 100vw, 1920px);
-  aspect-ratio: 1920 / 700;
-  max-height: 700px;
-} -->
-<!-- font-size: clamp(64px, 2.5vw, 70px); -->
