--- a/index.html
+++ b/index.html
@@ -294,7 +294,6 @@
       class="commissions-smoke"
     />
     <div class="container">
-      <!-- <div class="commissions-container"> -->
       <h2 class="title title-commissions">
         Commissions <span>Structures</span>
       </h2>
@@ -873,10 +872,10 @@
   </div>
 </footer>
 
-    <!-- <div class="cookie-popup" id="cookiePopup">
+    <div class="cookie-popup" id="cookiePopup">
   <div class="wrap-title-icon">
     <div class="cookie-icon">
-      <img src="/images/cookies.png" alt="cookies" />
+      <img src="/two-cards-partners/assets/cookies-CnnCiPDN.png" alt="cookies" />
     </div>
     <h2 class="cookie-title">This website uses cookies</h2>
   </div>
@@ -891,13 +890,7 @@
     <button class="btn-primary btn-accept">Accept</button>
   </div>
 </div>
- -->
+
 
   </body>
 </html>
-<!-- .section {
-  width: clamp(1110px, 100vw, 1920px);
-  aspect-ratio: 1920 / 700;
-  max-height: 700px;
-} -->
-<!-- font-size: clamp(64px, 2.5vw, 70px); -->
