--- a/faq-page.html
+++ b/faq-page.html
@@ -11,12 +11,12 @@
       rel="stylesheet"
     />
     <title>TwoCards Partners</title>
-    <script type="module" crossorigin src="/two-cards-partners/assets/main-CMaTX-pc.js"></script>
-    <link rel="stylesheet" crossorigin href="/two-cards-partners/assets/main-BS3nr_qL.css">
+    <script type="module" crossorigin src="/two-cards-partners/assets/main-B6xxeaOA.js"></script>
+    <link rel="stylesheet" crossorigin href="/two-cards-partners/assets/main-JivVTTCS.css">
   </head>
   <body>
     <section class="header-section">
-  <div class="header-container">
+  <div class="header-container faq-page-container">
     <a href="./index.html" class="logo-link">
       <picture>
         <source srcset="/two-cards-partners/assets/logo-desktop-CzAXJfpn.png" media="(min-width: 768px)" />
@@ -76,13 +76,13 @@
 
     <main>
       <section id="faq" class="faq">
-  <div class="container">
+  <div class="container faq-page-container">
     <h1 class="title">FAQ</h1>
-    <p class="subtitle">
+    <p class="subtitle faq-subtitle">
       Need help? Check out our most frequently asked questions.
     </p>
 
-    <ul class="faq-list">
+    <ul class="faq-list faq-list-page">
       <li class="faq-item">
         <button class="faq-question">
           <span class="faq-question-text">How fast can I get approved?</span>
