--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/favicon.webp" />
+    <link rel="icon" type="image/webp" href="/two-cards-partners/assets/favicon-CMGOyKcJ.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
     <title>TwoCards Partners</title>
-    <script type="module" crossorigin src="/two-cards-partners/assets/main-CMaTX-pc.js"></script>
-    <link rel="stylesheet" crossorigin href="/two-cards-partners/assets/main-BS3nr_qL.css">
+    <script type="module" crossorigin src="/two-cards-partners/assets/main-B6xxeaOA.js"></script>
+    <link rel="stylesheet" crossorigin href="/two-cards-partners/assets/main-JivVTTCS.css">
   </head>
   <body>
     <section class="header-section">
