--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
     <title>TwoCards Partners</title>
-    <script type="module" crossorigin src="/two-cards-partners/assets/main-CgF4DF9l.js"></script>
-    <link rel="stylesheet" crossorigin href="/two-cards-partners/assets/main-B6KGSKE5.css">
+    <script type="module" crossorigin src="/two-cards-partners/assets/main-DTuNohmY.js"></script>
+    <link rel="stylesheet" crossorigin href="/two-cards-partners/assets/main-DyVA0Io-.css">
   </head>
   <body>
     <section class="header-section">
@@ -113,6 +113,10 @@
     <div class="hero-img-wrap">
       <picture>
         <source srcset="/two-cards-partners/assets/hero-img-BGpYohAO.png" media="(min-width: 1110px)" />
+        <source
+          srcset="/two-cards-partners/assets/hero-img-tablet-BhNGifzd.png"
+          media="(min-width: 768px)"
+        />
         <img
           src="/two-cards-partners/assets/hero-img-phone-two-DRMihRES.png"
           alt="Casino characters"
@@ -885,10 +889,10 @@
   </div>
 </footer>
 
-    <div class="cookie-popup" id="cookiePopup">
+    <!-- <div class="cookie-popup" id="cookiePopup">
   <div class="wrap-title-icon">
     <div class="cookie-icon">
-      <img src="/two-cards-partners/assets/cookies-CnnCiPDN.png" alt="cookies" />
+      <img src="/images/cookies.png" alt="cookies" />
     </div>
     <h2 class="cookie-title">This website uses cookies</h2>
   </div>
@@ -903,7 +907,7 @@
     <button class="btn-primary btn-accept">Accept</button>
   </div>
 </div>
-
+ -->
 
   </body>
 </html>
