--- a/index.html
+++ b/index.html
@@ -889,10 +889,10 @@
   </div>
 </footer>
 
-    <!-- <div class="cookie-popup" id="cookiePopup">
+    <div class="cookie-popup" id="cookiePopup">
   <div class="wrap-title-icon">
     <div class="cookie-icon">
-      <img src="/images/cookies.png" alt="cookies" />
+      <img src="/two-cards-partners/assets/cookies-CnnCiPDN.png" alt="cookies" />
     </div>
     <h2 class="cookie-title">This website uses cookies</h2>
   </div>
@@ -907,7 +907,7 @@
     <button class="btn-primary btn-accept">Accept</button>
   </div>
 </div>
- -->
+
 
   </body>
 </html>
