--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <load ="partials/contact-us.html" />
     </main>
     <load ="partials/footer.html" />
-    <!-- <load ="partials/cookie.html" /> -->
+    <load ="partials/cookie.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
